2002-10-27  Mark Wielaard  <mark@klomp.org>

	* gnu.testlet.java.lang.StringBuffer.StringBufferTest (test_insert):
	Test for IndexOutOfBoundException not NullPointerException.

2002-10-28  Stephen Crawley <crawley@dstc.edu.au>
        * gnu/testlet/java/lang/Class/reflect.java: Added tests for
	getField and getDeclaredField with inherited fields.

2002-10-26  Daryl Lee <dol@sources.redhat.com>

	* gnu/testlet/java/io/PushbackInputStream: Added tests for
	available() and markSupported(), to complete method tests.

2002-10-26  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResource.java: New test.

2002-10-26  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/util/LinkedHashMap/LinkedHashMapTest.java: New
	test.

2002-10-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/reflect/Method/equals.java: Add null check.

2002-10-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/listFiles.java: New test.

2002-10-23  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Class/ClassTest.java: fix subtest #2
	for Class.getClassLoader() to check for JDK 1.3/1.4 behaviour

2002-10-21  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Class/reflect2.java: Completed tests for
	inner class introspection methods.  (No testing of security yet)
	* gnu/testlet/java/lang/Class/reflect.java: ditto
	* gnu/testlet/java/lang/Class/rf2_help.java: ditto
	* gnu/testlet/java/lang/Class/rf_help.java: ditto

2002-10-20  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Class/ClassTest.java: Rejigged to use
	'harness.check(...)' rather than 'if (!...) { harness.fail(...) }
	* gnu/testlet/java/lang/Class/reflect.java: Cosmetic tidyups.

2002-10-19  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Class/reflect2.java: New test for the
	inner class reflection methods.
	* gnu/testlet/java/lang/Class/rf2_help.java: Helper for above test.