@@ -1,3 +1,9 @@
+2002-10-28  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/testlet/java/io/FileInputStream/read.java: New test.
+	* gnu/testlet/java/io/FileOutputStream/write.java: New test.
+	* gnu/testlet/java/io/InputStreamReader/except.java: Show debug.
+
 2002-10-27  Mark Wielaard  <mark@klomp.org>
 
 	* gnu.testlet.java.lang.StringBuffer.StringBufferTest (test_insert):
